comit uno desarollador

--- a/home.html
+++ b/home.html
@@ -9,5 +9,12 @@
 <body>
     <h2>primer commit </h2>
     <p>parrafo </p>
+    <div>
+        <ul>
+            <li>menu 1</li>
+            <li>menu 1</li>
+            <li>menu 1</li>
+        </ul>
+    </div>
 </body>
 </html>
